# sycamore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sycamore.desktop
include/sycamore/: Core.h  defines.h  server.h  util.h  wlroots.h
include/sycamore/desktop/: CompositorHandler.h  Layer.h  LayerShellHandler.h  Popup.h  ShellManager.h  Surface.h  Toplevel.h  View.h  WindowManager.h  Workspace.h  XdgShellHandler.h  XdgToplevel.h  XdgView.h  desktop.h  layer.h  popup.h  scene.h  view.h  window-control.h  workspace.h
include/sycamore/input/: Cursor.h  DragIcon.h  InputDevice.h  InputManager.h  KeybindingManager.h  Keyboard.h  Pointer.h  Seat.h  cursor.h  keybinding.h  keybindingDispatchers.h  keyboard.h  libinput.h  pointer.h  seat.h  seat_device.h
include/sycamore/output/: Output.h  OutputLayout.h  OutputManager.h  output.h  scene.h
include/sycamore/scene/: Element.h  Scene.h  SceneElement.h  Tree.h
include/sycamore/util/: box.h  listener.h  time.h
include/sycamore/utils/: CHandle.h  List.h  Listener.h  Point.h  box.h  box_helper.h  process.h  time.h
protocol/: xdg-shell-protocol.h
src/: Core.cpp  main.cpp
src/desktop/: Layer.cpp  Popup.cpp  ShellManager.cpp  Toplevel.cpp  WindowManager.cpp  Workspace.cpp  XdgToplevel.cpp
src/input/: Cursor.cpp  DragIcon.cpp  InputManager.cpp  KeybindingManager.cpp  Keyboard.cpp  Pointer.cpp  Seat.cpp
src/input/seatInput/: DefaultInput.cpp  ImplicitGrab.cpp  PointerMove.cpp  PointerResize.cpp
src/input/state/: ImplicitGrab.cpp  Passthrough.cpp  PointerMove.cpp  PointerResize.cpp
src/output/: Output.cpp  OutputLayout.cpp  OutputManager.cpp
src/scene/: Scene.cpp  Tree.cpp
src/utils/: process.cpp
sycamore/: Core.cpp  main.c  main.cpp  server.c  util.c
sycamore/desktop/: Layer.cpp  Popup.cpp  ShellManager.cpp  Toplevel.cpp  View.cpp  WindowManager.cpp  XdgToplevel.cpp  XdgView.cpp  desktop.c  layer.c  popup.c  scene.c  view.c  window-control.c  workspace.c
sycamore/input/: Cursor.cpp  DragIcon.cpp  InputManager.cpp  KeybindingManager.cpp  Keyboard.cpp  Pointer.cpp  Seat.cpp  cursor.c  keybinding.c  keyboard.c  libinput.c  libinput.cpp  pointer.c  seat.c  seat_device.c
sycamore/output/: Output.cpp  OutputLayout.cpp  output.c  scene.c
sycamore/scene/: Scene.cpp
sycamore/util/: time.c
sycamore/utils/: process.cpp
(+43 files in other folders)
